--- a/.github/workflows/build_base_image.yml
+++ b/.github/workflows/build_base_image.yml
@@ -16,12 +16,14 @@ jobs:
         run: docker build -t base-image ./docker_image
 
       - name: Push base image
-        run: echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-        run: docker tag base-image ghcr.io/${{ github.repository }}/base-image:${{ github.ref_name }}
-        run: docker push ghcr.io/${{ github.repository }}/base-image:${{ github.ref_name }}
+        run: |
+          echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+          docker tag base-image ghcr.io/${{ github.repository }}/base-image:${{ github.ref_name }}
+          docker push ghcr.io/${{ github.repository }}/base-image:${{ github.ref_name }}
       
       # if branch is main, also push as latest
       - name: Push base image as latest
         if: github.ref == 'refs/heads/main'
-        run: docker tag base-image ghcr.io/${{ github.repository }}/base-image:latest
-        run: docker push ghcr.io/${{ github.repository }}/base-image:latest
+        run: |
+          docker tag base-image ghcr.io/${{ github.repository }}/base-image:latest
+          docker push ghcr.io/${{ github.repository }}/base-image:latest
