--- a/.github/workflows/build_base_image.yml
+++ b/.github/workflows/build_base_image.yml
@@ -18,12 +18,12 @@ jobs:
       - name: Push base image
         run: |
           echo ${{ secrets.GITHUB_TOKEN }} | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-          docker tag base-image ghcr.io/${{ github.repository }}/base-image:${{ github.ref_name }}
-          docker push ghcr.io/${{ github.repository }}/base-image:${{ github.ref_name }}
+          docker tag base-image ghcr.io/${{ github.repository | toLower }}/base-image:${{ github.ref_name | toLower }}
+          docker push ghcr.io/${{ github.repository | toLower }}/base-image:${{ github.ref_name | toLower }}
       
       # if branch is main, also push as latest
       - name: Push base image as latest
         if: github.ref == 'refs/heads/main'
         run: |
-          docker tag base-image ghcr.io/${{ github.repository }}/base-image:latest
-          docker push ghcr.io/${{ github.repository }}/base-image:latest
+          docker tag base-image ghcr.io/${{ github.repository | toLower }}/base-image:latest
+          docker push ghcr.io/${{ github.repository | toLower }}/base-image:latest
